# chot

./: .gitignore  README.md  copilot_response_tester.py  copilot_response_tester_main.py  pyproject.toml
.github/: copilot-instructions.md
chot_tests/: __init__.py  cli.py  content_generator.py  file_operations.py
chot_tests/utils/: __init__.py  error_handling.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_content_generator.py
